fixing gallery on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -268,6 +268,7 @@ hr {
 .image-navigation {
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
     gap: 5px;
     margin: 5px 0;
   }
